# CollisionChecker_IGL

./: CMakeLists (copy).txt  Purpose.txt  README.md
Mesh_Processing_Automation/: CMakeLists.txt  CMakeLists_other.txt  prepare_dependencies_other.sh
Mesh_Processing_Automation/src/: mesh_processing.cpp
src/: CollisionChecker.cpp  collision_helpers.cpp  collision_helpers.h  vis_tools.cpp  vis_tools.h
